# spot

./: .gitignore  .gitmodules  README.md  generate_protos.sh
launch/: spot.launch
spot/: CMakeLists.txt  package.xml
spot_comm/: CMakeLists.txt  README.md  api  bosdyn  package.xml  setup.py
spot_comm/action/: Waypoint.action
spot_comm/include/: helpers.h  image.h
spot_comm/include/bosdyn/api/: auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h  auth_service.grpc.pb.cc  auth_service.grpc.pb.h  auth_service.pb.cc  auth_service.pb.h  basic_command.grpc.pb.cc  basic_command.grpc.pb.h  basic_command.pb.cc  basic_command.pb.h  data_chunk.grpc.pb.cc  data_chunk.grpc.pb.h  data_chunk.pb.cc  data_chunk.pb.h  directory.grpc.pb.cc  directory.grpc.pb.h  directory.pb.cc  directory.pb.h  directory_registration.grpc.pb.cc  directory_registration.grpc.pb.h  directory_registration.pb.cc  directory_registration.pb.h  directory_registration_service.grpc.pb.cc  directory_registration_service.grpc.pb.h  directory_registration_service.pb.cc  directory_registration_service.pb.h  directory_service.grpc.pb.cc  directory_service.grpc.pb.h  directory_service.pb.cc  directory_service.pb.h  estop.grpc.pb.cc  estop.grpc.pb.h  estop.pb.cc  estop.pb.h  estop_service.grpc.pb.cc  estop_service.grpc.pb.h  estop_service.pb.cc  estop_service.pb.h  (+132 more)
spot_comm/include/bosdyn/api/graph_nav/: graph_nav.grpc.pb.cc  graph_nav.grpc.pb.h  graph_nav.pb.cc  graph_nav.pb.h  graph_nav_service.grpc.pb.cc  graph_nav_service.grpc.pb.h  graph_nav_service.pb.cc  graph_nav_service.pb.h  map.grpc.pb.cc  map.grpc.pb.h  map.pb.cc  map.pb.h  nav.grpc.pb.cc  nav.grpc.pb.h  nav.pb.cc  nav.pb.h  recording.grpc.pb.cc  recording.grpc.pb.h  recording.pb.cc  recording.pb.h  recording_service.grpc.pb.cc  recording_service.grpc.pb.h  recording_service.pb.cc  recording_service.pb.h
spot_comm/include/bosdyn/api/mission/: mission.grpc.pb.cc  mission.grpc.pb.h  mission.pb.cc  mission.pb.h  mission_service.grpc.pb.cc  mission_service.grpc.pb.h  mission_service.pb.cc  mission_service.pb.h  nodes.grpc.pb.cc  nodes.grpc.pb.h  nodes.pb.cc  nodes.pb.h  remote.grpc.pb.cc  remote.grpc.pb.h  remote.pb.cc  remote.pb.h  remote_service.grpc.pb.cc  remote_service.grpc.pb.h  remote_service.pb.cc  remote_service.pb.h  util.grpc.pb.cc  util.grpc.pb.h  util.pb.cc  util.pb.h
spot_comm/include/bosdyn/api/spot/: robot_command.grpc.pb.cc  robot_command.grpc.pb.h  robot_command.pb.cc  robot_command.pb.h  spot_check.grpc.pb.cc  spot_check.grpc.pb.h  spot_check.pb.cc  spot_check.pb.h  spot_check_service.grpc.pb.cc  spot_check_service.grpc.pb.h  spot_check_service.pb.cc  spot_check_service.pb.h
spot_comm/include/bosdyn/api/spot_cam/: LED.grpc.pb.cc  LED.grpc.pb.h  LED.pb.cc  LED.pb.h  audio.grpc.pb.cc  audio.grpc.pb.h  audio.pb.cc  audio.pb.h  camera.grpc.pb.cc  camera.grpc.pb.h  camera.pb.cc  camera.pb.h  compositor.grpc.pb.cc  compositor.grpc.pb.h  compositor.pb.cc  compositor.pb.h  health.grpc.pb.cc  health.grpc.pb.h  health.pb.cc  health.pb.h  logging.grpc.pb.cc  logging.grpc.pb.h  logging.pb.cc  logging.pb.h  network.grpc.pb.cc  network.grpc.pb.h  network.pb.cc  network.pb.h  power.grpc.pb.cc  power.grpc.pb.h  power.pb.cc  power.pb.h  ptz.grpc.pb.cc  ptz.grpc.pb.h  ptz.pb.cc  ptz.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  (+8 more)
spot_comm/include/certs/: ca.crt  ca.key  client.crt  client.csr  client.key  gen-certs.conf  gen-certs.sh  server.crt  server.csr  server.key
spot_comm/include/spot_comm/: AuthServiceImpl.h  DirectoryServiceImpl.h  EstopServiceImpl.h  GetStateCommand.h  Header.h  ImageServiceImpl.h  LeaseServiceImpl.h  LocalGridServiceImpl.h  LogAnnotationServiceImpl.h  PowerServiceImpl.h  RobotCommandServiceImpl.h  RobotIdServiceImpl.h  RobotStateServiceImpl.h  TimeSyncServiceImpl.h  Timer.h  VelocityCommand.h  spot_client.h  spot_driver.h  ssl_auth_client.h  ssl_estop_client.h  ssl_lease_client.h  ssl_power_client.h  ssl_robot_command_client.h  ssl_robot_state_client.h  ssl_time_sync_client.h
spot_comm/launch/: architecture.jackal.launch  architecture.launch
spot_comm/maps/: amrl_maps
spot_comm/nodes/: robot_sensor_node.py  smads_endpoints_node.py  spot_sensors_node.py
spot_comm/scripts/: move_client
spot_comm/src/: AuthServiceImpl.cpp  DirectoryServiceImpl.cpp  EstopServiceImpl.cpp  GetStateCommand.cpp  Header.cpp  ImageServiceImpl.cpp  LeaseServiceImpl.cpp  LocalGridServiceImpl.cpp  LogAnnotationServiceImpl.cpp  PowerServiceImpl.cpp  RobotCommandServiceImpl.cpp  RobotIdServiceImpl.cpp  RobotStateServiceImpl.cpp  TimeSyncServiceImpl.cpp  Timer.cpp  VelocityCommand.cpp  auth.cpp  auth_client.cpp  auth_service.cpp  ca.crt  ca.key  client.crt  client.csr  client.key  directory_client.cpp  estop_client.cpp  gps_translator.cc  image_client.cpp  lease_client.cpp  log_annotation_client.cpp  move_client.py  robot_command_client.cpp  robot_state_client.cpp  server.cpp  server.crt  server.csr  server.key  spot_client.cpp  spot_driver.cpp  ssl_auth_client.cpp  (+10 more)
spot_comm/src/examples/: auth_client.cpp  auth_full.cpp  auth_server.cpp  image.cpp
spot_comm/src/spot_comm/client/: .robot_client.py.swp  __init__.py  jackal_client.py  robot_client.py  spot_client.py
spot_comm/src/spot_comm/interface/: __init__.py  robot_navigation_interface.py  robot_sensor_interface.py
spot_description/: CMakeLists.txt  package.xml
spot_description/launch/: display.launch
spot_description/meshes/: base.dae  fl.hip.dae  fr.hip.dae  fr.lleg.dae  hl.hip.dae  hl.uleg.dae  hr.hip.dae  hr.lleg.dae  hr.uleg.dae  spot_whole_body.dae
spot_description/urdf/: spot.plugins.xacro  spot.urdf  spot.urdf.xacro  spot.xacro  spot_original_message.txt
spot_gazebo/: CMakeLists.txt  LICENSE  package.xml
spot_gazebo/config/: navigation.rviz  (+1 more)
spot_navigation/: CMakeLists.txt  package.xml
spot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml
spot_navigation/launch/: amcl_diff.launch  gmapping.launch  move_base.launch
spot_navigation/maps/: ahg_map.yaml
spot_sim_description/: package.xml
worlds/: spot_test.world
(+17 files in other folders)
