<?xml version="1.0"?>
<package format="2">
  <name>spot</name>
  <version>0.0.1</version>
  <description>The Spot meta package</description>

  <maintainer email="maxwell@cs.utexas.edu">Max Svetlik</maintainer>

  <license>BSD</license>

  <author email="dakshdua@utexas.edu">Daksh Dua</author>
  <author email="marikamurphy@utexas.edu">Marika Murphy</author>
  <author email="maxwell@cs.utexas.edu">Max Svetlik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>spot_gazebo</exec_depend>
  <exec_depend>spot_description</exec_depend>
  <exec_depend>spot_comm</exec_depend>
  <exec_depend>spot_navigation</exec_depend>
  

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
