<?xml version="1.0"?>
<package format="2">
  <name>spot_comm</name>
  <version>0.0.1</version>
  <description>The spot_comm package</description>

  <maintainer email="maxwell@cs.utexas.edu">Max Svetlik</maintainer>

  <license>BSD</license>

  <author email="dakshdua@utexas.edu">Daksh Dua</author>
  <author email="marikamurphy@utexas.edu">Marika Murphy</author>
  <author email="maxwell@cs.utexas.edu">Max Svetlik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gprc</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
